<resources>
    <string name="app_name">MyAndroid</string>

    <string name="hello_world">Hello lry , my git project !</string>
    <string name="hello_world_return">测试页面与页面的传值!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_return">ReturnActivity</string>
    <string name="buttonText">buttonText</string>
    <string name="buttonWebPage">跳到web页面</string>
    <string name="buttonWebJS">跳到webJS页面</string>
    <string name="buttonLoginStatus">跳到loginStatus页面</string>
    <string name="title_activity_web_page">WebPageActivity</string>
    <string name="title_web_page">WebPage page</string>
    <string name="title_activity_web_js">WebJSActivity</string>
    <string name="btn1_text">btn1_text</string>
    <string name="title_activity_login_status">LoginStatusActivity</string>
</resources>
